@@ -1,0 +1,19 @@
+#
+#  $Id$
+#
+
+This directory contains an example program which should be of use
+in some situations.  It is designed to be used with Qemu's
+virtual FAT file system support.  Qemu can make a directory on
+the host computer appear as a FAT file system to the simulated
+system. This capability appears to have limits on the number
+and size of files as well as some limitations about writes
+from the simulated system appearing in the native file system.
+But this should be useful for testing interpreters like Parrot,
+Mono, or the RTEMS Shell.  
+
+When testing an interpreter, you often want to have the same
+executable exercised with different arguments or input files.
+With this setup, you can copy those test support files into 
+the host directory and the RTEMS "main" will use those in
+support of the testing.
